Adding First Section Of the portfolio

--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li id="my-logo">Abdellah</li>
-            <li><img src="img/hamburger-icon.png" alt="hamburger-icon"></li>
-        </ul>
-    </nav>
+    <section class="container">
+        <nav class="mobile-navbar">
+            <ul>
+                <li id="my-logo">Abdellah</li>
+                <li><img src="img/hamburger-icon.png" alt="hamburger-icon"></li>
+            </ul>
+        </nav>
+        <div class="first-section">
+            <h1>I'm Abdellah Glad to see you!</h1>
+            <p id="h1-supporting-para">I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
+            <button id="first-section-button" type="submit">LET'S CONNECT</button>
+            <ul class="first-section-links">
+                <li><a href="https://twitter.com/belkaiduus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Twitter.png" alt="Twitter Logo" ></a></li>
+                <li><a href="https://linkedin.com/in/belkaidus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Linkedin.png" alt="Linkedin Logo" ></a></li>
+                <li><a href="https://medium.com/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/medium.png" alt="Medium Logo" ></a></li>
+                <li><a href="https://github.com/mr-abdellah" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/GitHub.png" alt="GitHub Logo"></a></li>
+                <li><a href="https://angel.co/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/angellist.png" alt="Angellist Logo"></a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
