Adding The Second Section Of My Portfolio

--- a/index.html
+++ b/index.html
@@ -26,6 +26,78 @@
                 <li><a href="https://angel.co/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/angellist.png" alt="Angellist Logo"></a></li>
             </ul>
         </div>
+        <div class="second-section">
+            <div class="projects">
+
+                <div class="project">
+                    <div><img src="img/projects/p1.png" alt="p1 overiew" class="placeholder"></div>
+                    <h2>Tonic</h2>
+                    <div class="details">
+                        <p class="fd">CANOPY</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>Back End Dev</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>2015</p>
+                    </div>
+                    <p class="project-info">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="project-list">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>javascript</li>
+                    </ul>
+                    <button type="submit">See Project</button>
+                </div>
+
+                <div class="project">
+                    <div><img src="img/projects/p2.png" alt="p1 overiew" class="placeholder"></div>
+                    <h2>Multi-Post Stories</h2>
+                    <div class="details">
+                        <p class="fd">CANOPY</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>Back End Dev</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>2015</p>
+                    </div>
+                    <p class="project-info">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="project-list">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>javascript</li>
+                    </ul>
+                    <button type="submit">See Project</button>
+                </div>
+
+                <div class="project">
+                    <div><img src="img/projects/p3.png" alt="p1 overiew" class="placeholder"></div>
+                    <h2>Tonic</h2>
+                    <div class="details">
+                        <p class="fd">CANOPY</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>Back End Dev</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>2015</p>
+                    </div>
+                    <p class="project-info">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="project-list">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>javascript</li>
+                    </ul>
+                    <button type="submit">See Project</button>
+                </div>
+
+                <div class="project">
+                    <div><img src="img/projects/p4.png" alt="p1 overiew" class="placeholder"></div>
+                    <h2>Multi-Post Stories</h2>
+                    <div class="details">
+                        <p class="fd">CANOPY</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>Back End Dev</p>
+                        <img src="img/Counter.png" alt="Counter icon"><p>2015</p>
+                    </div>
+                    <p class="project-info">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="project-list">
+                        <li>html</li>
+                        <li>css</li>
+                        <li>javascript</li>
+                    </ul>
+                    <button type="submit">See Project</button>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
