Adding About Me Section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="first-section">
             <h1>I'm Abdellah Glad to see you!</h1>
             <p id="h1-supporting-para">I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
-            <button id="first-section-button" type="submit">LET'S CONNECT</button>
+            <button class="button-section" type="submit">LET'S CONNECT</button>
             <ul class="first-section-links">
                 <li><a href="https://twitter.com/belkaiduus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Twitter.png" alt="Twitter Logo" ></a></li>
                 <li><a href="https://linkedin.com/in/belkaidus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Linkedin.png" alt="Linkedin Logo" ></a></li>
@@ -97,6 +97,19 @@
                     <button type="submit">See Project</button>
                 </div>
             </div>
+        </div>
+
+        <div class="third-section">
+            <h3>About Myself</h3>
+            <p id="h3-supporting-paragraph">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
+            <button class="button-section" type="submit">LET'S CONNECT</button>
+            <ul class="first-section-links">
+                <li><a href="https://twitter.com/belkaiduus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Twitter.png" alt="Twitter Logo" ></a></li>
+                <li><a href="https://linkedin.com/in/belkaidus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Linkedin.png" alt="Linkedin Logo" ></a></li>
+                <li><a href="https://medium.com/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/medium.png" alt="Medium Logo" ></a></li>
+                <li><a href="https://github.com/mr-abdellah" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/GitHub.png" alt="GitHub Logo"></a></li>
+                <li><a href="https://angel.co/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/angellist.png" alt="Angellist Logo"></a></li>
+            </ul>
         </div>
     </section>
 </body>
