--- a/index.html
+++ b/index.html
@@ -100,16 +100,37 @@
         </div>
 
         <div class="third-section">
-            <h3>About Myself</h3>
-            <p id="h3-supporting-paragraph">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
-            <button class="button-section" type="submit">LET'S CONNECT</button>
-            <ul class="first-section-links">
-                <li><a href="https://twitter.com/belkaiduus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Twitter.png" alt="Twitter Logo" ></a></li>
-                <li><a href="https://linkedin.com/in/belkaidus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Linkedin.png" alt="Linkedin Logo" ></a></li>
-                <li><a href="https://medium.com/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/medium.png" alt="Medium Logo" ></a></li>
-                <li><a href="https://github.com/mr-abdellah" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/GitHub.png" alt="GitHub Logo"></a></li>
-                <li><a href="https://angel.co/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/angellist.png" alt="Angellist Logo"></a></li>
-            </ul>
+            <div class="about-me">
+                <h3>About Myself</h3>
+                <p id="h3-supporting-paragraph">Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
+                <button class="button-section" type="submit">LET'S CONNECT</button>
+                <ul class="first-section-links">
+                    <li><a href="https://twitter.com/belkaiduus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Twitter.png" alt="Twitter Logo" ></a></li>
+                    <li><a href="https://linkedin.com/in/belkaidus" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/Linkedin.png" alt="Linkedin Logo" ></a></li>
+                    <li><a href="https://medium.com/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/medium.png" alt="Medium Logo" ></a></li>
+                    <li><a href="https://github.com/mr-abdellah" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/GitHub.png" alt="GitHub Logo"></a></li>
+                    <li><a href="https://angel.co/" target="_blank" rel="noopener"><img rel="noreferrer" src="img/social/angellist.png" alt="Angellist Logo"></a></li>
+                </ul>
+                <div class="button"><button type="submit" id="gmr">Get my resume</button></div>
+            </div>
+            <div class="lfs">
+                <div class="languages">
+                    <div class="title"><h4>languages</h4><img src="img/arrow1.png" alt="Arrow"></div>
+                    <ul>
+                        <li><img src="img/js.png" alt="javascript icon"><p>Javascript</p></li>
+                        <li><img src="img/html.png" alt="html icon"><p>HTML</p></li>
+                        <li><img src="img/css.png" alt="css icon"><p>CSS</p></li>
+                    </ul>
+                </div>
+
+                <div class="frameworks">
+                    <div class="title"><h4>Frameworks</h4><img src="img/arrow2.png" alt="Arrow"></div>
+                </div>
+
+                <div class="skills">
+                    <div class="title"><h4>Skills</h4><img src="img/arrow2.png" alt="Arrow"></div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
