--- a/index.html
+++ b/index.html
@@ -132,6 +132,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="fourth-section">
+            <h5>Contact Me</h5>
+            <p class="h5-supporting-paragraph">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it </p>
+            <form action="https://formspree.io/f/xdobpeww" method="post">
+                <input type="text" name="userName" id="username" placeholder="Full Name" required>
+                <input type="email" name="userEmail" id="email" required placeholder="Email Address">
+                <textarea name="message" id="message" cols="30" rows="10" required placeholder="Write your message here"></textarea>
+                <button type="submit">Get It Touch</button>
+            </form>
+        </div>
     </section>
 </body>
 </html>
